Day off info: New API Create
